Optimized backward analysis